--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -3,7 +3,7 @@ updates:
   - package-ecosystem: github-actions
     directory: "/"
     schedule:
-      interval: weekly
+      interval: monthly
     labels:
       - github-actions
 
@@ -12,18 +12,18 @@ updates:
     schedule:
       interval: weekly
     versioning-strategy: increase
-    open-pull-requests-limit: 2
+    open-pull-requests-limit: 1
 
   - package-ecosystem: npm
     directory: "/htmlhint"
     schedule:
       interval: weekly
     versioning-strategy: increase
-    open-pull-requests-limit: 2
+    open-pull-requests-limit: 1
 
   - package-ecosystem: npm
     directory: "/htmlhint-server"
     schedule:
       interval: weekly
     versioning-strategy: increase
-    open-pull-requests-limit: 2
+    open-pull-requests-limit: 1
