--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/htmlhint/vscode-htmlhint.git"
+    "url": "https://github.com/htmlhint/vscode-htmlhint.git"
   },
   "funding": "https://opencollective.com/htmlhint",
   "license": "MIT",
