--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "eslint": "^9.39.1",
     "eslint-config-prettier": "^10.1.8",
     "glob": "^13.0.0",
+    "globals": "^16.5.0",
     "mocha": "^11.7.5",
     "prettier": "3.6.2",
     "ts-node": "^10.9.2",
