--- a/test/autofix/.htmlhintrc
+++ b/test/autofix/.htmlhintrc
@@ -1,6 +1,7 @@
 {
   "alt-require": true,
   "attr-lowercase": true,
+  "attr-no-duplication": true,
   "attr-no-unnecessary-whitespace": true,
   "attr-value-double-quotes": true,
   "attr-value-no-duplication": true,
