--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "private": true,
   "description": "VS Code extension to support HTMLHint, an HTML linter.",
-  "homepage": "https://github.com/htmlhint/vscode-htmlhint#readme",
+  "homepage": "https://htmlhint.com",
   "bugs": {
     "url": "https://github.com/htmlhint/vscode-htmlhint/issues"
   },
@@ -43,7 +43,7 @@
     "glob": "^13.0.0",
     "globals": "^16.5.0",
     "mocha": "^11.7.5",
-    "prettier": "3.6.2",
+    "prettier": "3.7.1",
     "ts-node": "^10.9.2",
     "typescript": "5.5.4"
   },
